wb-cloud-agent (1.4.4) stable; urgency=medium

  * Move device certs check to ExecStartPre (instead of postinst)

 -- Vladimir Romanov <v.romanov@wirenboard.com>  Thu, 25 Apr 2024 19:56:21 +0300

wb-cloud-agent (1.4.3) stable; urgency=medium

  * Fixes around cloud connection status

 -- Aleksandr Kazadaev <aleksandr.kazadaev@wirenboard.com>  Mon, 22 Apr 2024 16:30:17 +0500

wb-cloud-agent (1.4.2) stable; urgency=medium

  * Send agent version to the cloud backend

 -- Dmitry Fedichkin <dmitrii.fedichkin@wirenboard.com>  Thu, 11 Apr 2024 14:28:17 +0100

wb-cloud-agent (1.4.1) stable; urgency=medium

  * Bugfix with cloud url in config

 -- Aleksandr Kazadaev <aleksandr.kazadaev@wirenboard.com>  Thu, 11 Apr 2024 12:05:17 +0500

wb-cloud-agent (1.4.0) stable; urgency=medium

  * Add multi-provider support

 -- Aleksandr Kazadaev <aleksandr.kazadaev@wirenboard.com>  Tue, 2 Apr 2024 15:49:17 +0500

wb-cloud-agent (1.3.3) stable; urgency=medium

  * Confirm unknown events without handling

 -- Dmitry Fedichkin <dmitrii.fedichkin@wirenboard.com>  Wed, 20 Mar 2024 15:49:17 +0100

wb-cloud-agent (1.3.2) stable; urgency=medium

  * Publish HW revision to the cloud backend

 -- Dmitry Fedichkin <dmitrii.fedichkin@wirenboard.com>  Mon, 25 Mar 2024 14:59:17 +0100

wb-cloud-agent (1.3.1) stable; urgency=medium

  * Console mode fix

 -- Aleksandr Kazadaev <aleksandr.kazadaev@wirenboard.com>  Fri, 9 Feb 2024 14:31:17 +0600

wb-cloud-agent (1.3.0) UNRELEASED; urgency=medium

  * Receive activation status and link on agent start up
  * Allow unknown event codes without errors to improve future compatibility

 -- kazqvaizer <kazqvaizer@fands.dev>  Mon, 05 Feb 2024 16:49:09 +1000

wb-cloud-agent (1.2.8) stable; urgency=medium

  * remove unused dependency on wb-configs, no functional changes

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Thu, 14 Dec 2023 18:31:17 +0600

wb-cloud-agent (1.2.7) stable; urgency=medium
