@@ -1,8 +1,9 @@
 wb-cloud-agent (1.4.4) stable; urgency=medium
 
   * Move device certs check to ExecStartPre (instead of postinst)
+  * Backup config via wb-configs
 
- -- Vladimir Romanov <v.romanov@wirenboard.com>  Thu, 25 Apr 2024 19:56:21 +0300
+ -- Vladimir Romanov <v.romanov@wirenboard.com>  Thu, 23 May 2024 21:12:49 +0300
 
 wb-cloud-agent (1.4.3) stable; urgency=medium
 
